--- a/tourplanner/pom.xml
+++ b/tourplanner/pom.xml
@@ -3,7 +3,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-
+<packaging>jar</packaging>
   <groupId>at.matthias.tourplanner</groupId>
   <artifactId>tourplanner</artifactId>
   <version>0.1.0</version>
@@ -87,6 +87,12 @@
       <version>${slf4j.version}</version>
     </dependency>
   
+  
+    <dependency>
+      <groupId>com.fasterxml.jackson.dataformat</groupId>
+      <artifactId>jackson-dataformat-xml</artifactId>
+      <version>2.10.0.pr1</version>
+    </dependency>
   </dependencies>
 
   <build>
